Cleaned up Entity and added tests. Cleaned up EcsViewFactory a bit.